# protoc-gen-ts

./: .bazelrc  .editorconfig  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .prettierrc  3088.patch  BUILD.bazel  Cargo.toml  LICENSE  README.md  WORKSPACE  build.rs  build.sh  bundle.sh  deno.json  esbuild.mjs  failing_tests.txt  failures.txt  go.mod  go.sum  index.bzl  index.js  out  output-all.tap  output.js  output.json  output.tap  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  protoc-gen-js  test.sh  test.ts  tsconfig.json
examples/bazel/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  index.js  index.ts  message.js  message.ts  package.json  tsconfig.json
examples/bazel/src/: BUILD.bazel  index.ts  message.proto
examples/grpc/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  client.js  client.ts  package-lock.json  package.json  server.js  server.ts  tsconfig.json  type.js  type.ts
examples/grpc/client/: BUILD.bazel  client.ts
examples/grpc/schema/: BUILD.bazel  example.proto
examples/grpc/server/: BUILD.bazel  server.ts
examples/grpc/src/: client.ts  server.ts  type.ts
examples/web/client/: BUILD.bazel  index.html  index.ts  rollup.config.js  weather.proto  weather.ts
package/: BUILD.bazel  package.json  rollup.config.js
src/: BUILD.bazel  WORKSPACE  comment.ts  compilation.rs  compile.rs  config.ts  context.rs  descriptor.js  descriptor.ts  emit.rs  emitter.rs  enum.rs  enumtype.rs  field.js  field.rs  field.ts  field_getter.rs  field_setter.rs  field_type.rs  file.rs  graph.rs  index.bzl  index.from-src.bzl  index.js  index.ts  lib.rs  main.rs  mapper.rs  message.rs  mod.rs  namespace.rs  option.rs  option.ts  options.js  options.rs  package.bzl  package.json  parse.rs  print.rs  rpc.js  (+6 more)
src/__/: field_getter.rs
src/ast/: enum.rs  field.rs  field_type.rs  file.rs  json.rs  macros.rs  message.rs  mod.rs  oneof.rs
src/async/: rpc.ts
src/common/: enum.rs  field.rs  field_type.rs  file.rs  json.rs  macros.rs  message.rs  message_type.rs  method.rs  mod.rs  service.rs  util.rs
src/compiler/: BUILD.bazel  descriptor.d.ts  descriptor.js  descriptor.ts  index.ts  plugin.d.ts  plugin.js  plugin.ts
src/dbg/: field_setter.rs
src/descriptor/: descriptor.proto  descriptor.rs  mod.rs  plugin.proto  plugin.rs
src/examples/: var.rs
src/rpc/: node.js  node.ts  server.js  server.ts  util.js  util.ts  web.js  web.ts
src/runtime/: google_protobuf.rs  macros.rs  mod.rs
src/runtime/google_protobuf/: deserialize.rs  field.rs  mod.rs  serialize.rs  well_known.rs
src/runtime/grpc_web/: method.rs  mod.rs  setup.rs
test/: BUILD.bazel  complex.proto  conformance.spec.ts  conformance.ts  default.spec.ts  default.ts  deprecated.ts  dot.in.filenames.ts  enum_within_message.proto  enum_within_message.spec.ts  enum_within_message.ts  importdirective.proto  importdirective.spec.ts  importdirective.ts  imported.proto  imported.ts  integers.proto  integers.spec.ts  integers.ts  jstype.spec.ts  jstype.ts  map.proto  map.spec.ts  map.ts  messagefields.proto  messagefields.spec.ts  messagefields.ts  no-namespace.spec.ts  no-namespace.ts  oneof.proto  oneof.spec.ts  oneof.ts  optional_proto2.proto  optional_proto2.ts  optional_proto2_3.spec.ts  optional_proto3.proto  optional_proto3.ts  packagedirective.spec.ts  packagedirective.ts  repeated.spec.ts  (+12 more)
test/_/: BUILD.bazel  conformance.proto  deprecated.proto  dot.in.filenames.proto  enum_within_message.proto  importdirective.proto  imported.proto  jstype.proto  map.proto  messagefields.proto  packagedirective.proto  repeated.proto  rpcs.proto  sources.bzl
test/_/default/: BUILD.bazel  default.proto  default_common.proto  default_proto2.proto  default_proto3.proto
test/_/experimental/: BUILD.bazel  rpc.proto
test/_/explicit_override/: BUILD.bazel  explicit_override.proto
test/_/issues/: 171.proto  20.proto  BUILD.bazel  descriptor.proto  plugin.proto
test/_/json_names/: BUILD.bazel  json_names.proto
test/_/no_namespace/: BUILD.bazel  double_nested.proto  nested.proto  no_namespace.proto
test/_/optional/: BUILD.bazel  optional_proto2.proto  optional_proto3.proto
test/_/presence/: BUILD.bazel  presence_common.proto  presence_proto2.proto  presence_proto3.proto
test/conformance/: BUILD.bazel
test/conformance/map/: BUILD.bazel  go.mod  go.sum  map.go  map.spec.ts
test/conformance/maps/: BUILD.bazel  maps.go  maps.spec.ts  maps.ts
test/conformance/packedproto2/: BUILD.bazel  packed_proto2.ts  packedproto2.proto  packedproto2.spec.ts  packedproto2.ts
test/conformance/repeated/: BUILD.bazel  go.mod  repeated.go  repeated.spec.ts  repeated.ts
test/default/: BUILD.bazel  default.spec.ts  default.ts  default_common.ts  default_proto2.ts  default_proto3.ts
test/experimental/: BUILD.bazel  rpc.spec.ts  rpc.ts
test/explicit_override/: BUILD.bazel  explicit_override.spec.ts  explicit_override.ts
test/generation/: 20.proto  20.ts  complex.proto  complex.ts  descriptor.ts  plugin.proto  plugin.ts
test/import/: importdirective.proto  old.proto  oldpkg.proto  public.proto  public2.proto
test/integration/: BUILD.bazel  conformance.spec.ts  enum_within_message.spec.ts  importdirective.spec.ts  integers.spec.ts  messagefields.spec.ts  packagedirective.spec.ts  rpcs.spec.ts  serialization.spec.ts
test/issues/: 171.ts  20.proto  20.ts  BUILD.bazel
test/json_names/: BUILD.bazel  json_names.spec.ts  json_names.ts  rpc.spec.ts
test/no_namespace/: BUILD.bazel  double_nested.ts  nested.ts  noNamespace.ts  no_namespace.ts  rpc.spec.ts
test/optional/: BUILD.bazel  optional_proto2.ts  optional_proto3.ts
test/presence/: BUILD.bazel  presence.spec.ts  presence_common.ts  presence_proto2.ts  presence_proto3.ts
test/protos/: complex.proto  conformance.proto  dot.in.filenames.proto  enum_within_message.proto  importdirective.proto  imported.proto  integers.proto  messagefields.proto  packagedirective.proto  rpcs.proto  serialization.proto
test/web/: BUILD.bazel  cypress.config.js  plugin.js  server.go  spawn.js  weather.proto  weather.spec.js  web.spec.js
test/web/client/: index.ts  (+7 more)
(+179 files in other folders)
