load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/thesayyn/protoc-gen-ts
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

pkg_npm(
    name = "package",
    package_name = "protoc-gen-ts",
    srcs = [
        "README.md",
        "index.bzl",
        "package.json",
        "//bin:protoc-gen-ts.js",
    ],
    deps = [
        "//src:pkg",
    ],
)
