load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/thesayyn/protoc-gen-ts
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "package",
    srcs = [
        "README.md",
        "index.bzl",
        "package.json",
        "//bin:protoc-gen-ts.js",
    ],
    out = "protoc-gen-ts",
    data = [
        "//src:pkg",
    ],
)
