load("@bazel_gazelle//:def.bzl", "gazelle")

exports_files(["README.md"])

# gazelle:prefix github.com/thesayyn/protoc-gen-ts
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=private/go.mod",
        "-to_macro=private/deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)