[package]
name = "protoc-gen-ts"
version = "0.1.0"
authors = ["Sahin <thesayyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = "0.2"
swc_common = "0.15.0"
swc_ecma_ast = "0.60.0"
swc_ecma_codegen = "0.84.0"
swc_ecma_codegen_macros = "0.6.0"
swc_ecma_parser = "0.82.0"
swc_ecma_utils = "0.56.1"
serde_json = "1.0"
protobuf = "2.25.2"
lazy_static = "1.4.0"

[dev-dependencies]
swc_common = {version = "0.15.0", features = ["sourcemap"]}
swc_node_base =  "0.5.1"
testing = "0.16.0"