[package]
name = "protoc_gen_ts"
version = "0.1.0"
authors = ["Sahin <thesayyn@gmail.com>"]
edition = "2018"

[[bin]]
name = "protoc-gen-ts"
path = "src/main.rs"

[[bin]]
name = "ast-dump"
path = "bin/main.rs"

[dependencies]
swc_atoms = "0.5.5"
swc_common = {version = "0.31.8", features = ["tty-emitter"]}
swc_ecma_ast = {version = "0.104.1", features = ["serde"]}
swc_ecma_codegen = "0.139.2"
swc_ecma_codegen_macros = "0.7.2"
swc_ecma_parser = "0.134.1"
swc_ecma_utils = "0.117.1"
serde = "1.0.163"
serde_json = "1.0.96"
triomphe = "0.1.8"
protobuf = "3.1.0"
once_cell = "1.17.1"
swc_ecma_visit = "0.90.4"
pathdiff = "0.2.1"

[build-dependencies]
protobuf-codegen = "3.1.0"

[dev-dependencies]
glob = "0.3.1"
cfg-if = "1.0.0"