load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//tools:diff_and_update.bzl", "diff_and_update")

package(default_visibility = ["//visibility:public"])

diff_and_update(
    name = "diff_compiler",
    srcs = [
        "@third_party_protobuf//:plugin.ts",
        "@third_party_protobuf//:descriptor.ts"
    ],
    checked = ["compiler/plugin.ts", "compiler/descriptor.ts"]
)

ts_project(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS"
        },
    },
    deps = [
        "@npm//@grpc/grpc-js",
        "@npm//@types/node",
        "@npm//google-protobuf",
        "@npm//typescript"
    ],
)

js_library(
    name = "pkg",
    deps = [
        ":src"
    ]
)