load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

package(default_visibility = ["//visibility:public"])

write_source_files(
    name = "diff",
    files = {
        "compiler/descriptor.ts": "@third_party_protobuf//:descriptor.ts",
        "compiler/plugin.ts": "@third_party_protobuf//:plugin.ts",
    },
)

ts_project(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "noImplicitAny": True,
        },
    },
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/@types/node",
        "//:node_modules/google-protobuf",
        "//:node_modules/typescript",
    ],
)

js_library(
    name = "pkg",
    deps = [
        ":src",
    ],
)
