load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

package(default_visibility = ["//visibility:public"])

write_source_files(
    name = "diff",
    files = {
        "compiler/descriptor.ts": "@third_party_protobuf//:descriptor.ts",
        "compiler/plugin.ts": "@third_party_protobuf//:plugin.ts",
    }
)

ts_project(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "EsNext",
            "moduleResolution": "node",
            "noImplicitAny": True,
        },
    },
    deps = [
        "@npm//@grpc/grpc-js",
        "@npm//@types/google-protobuf",
        "@npm//@types/node",
        "@npm//google-protobuf",
        "@npm//typescript",
    ],
)
