
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//tools:diff_and_update.bzl", "diff_and_update")
load("//test/_:sources.bzl", "PROT_SOURCES")

diff_and_update(
    name = "diff",
    srcs = [
        "//test/_:%s" % src
        for src in PROT_SOURCES
    ],
    checked = PROT_SOURCES,
)

# Allow any subpackages to reference the config
exports_files(
    [
        "tsconfig.json",
    ],
    visibility = [":__subpackages__"],
)


ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    tsconfig = {}, # no special options
    extends = "//test:tsconfig.json",
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":tests",
    ],
)
