load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//test/_:sources.bzl", "PROT_SOURCES")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "diff",
    files = {
        src: "//test/_:%s" % src     
        for src in PROT_SOURCES
    }
)

ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "noImplicitAny": True,
        },
    },
    deps = [
        "@npm//@grpc/grpc-js",
        "@npm//@types/google-protobuf",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//google-protobuf",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":tests",
    ],
)
