load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//test/_:sources.bzl", "PROT_SOURCES")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "diff",
    files = {
        src: "//test/_:%s" % src
        for src in PROT_SOURCES
    },
)

ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "noImplicitAny": True,
        },
    },
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/google-protobuf",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":tests",
    ],
)
