load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//protoc-gen-ts:index.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

proto_library(
    name = "message_proto",
    srcs = ["message.proto"],
)

ts_proto_library(
    name = "message",
    deps = [
        ":message_proto",
    ],
)

ts_library(
    name = "src",
    srcs = [
        "index.ts",
        ":message",
    ],
    deps = [
        "@npm//google-protobuf",
        "@npm//@types/node"
    ],
)

nodejs_binary(
    name = "bin",
    data = [
        ":src",
    ],
    entry_point = "index.ts",
    # See: https://github.com/bazelbuild/rules_nodejs/issues/2600
    templated_args = ["--bazel_patch_module_resolver"],
)
