load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@npm//protoc-gen-ts:index.bzl", "ts_proto_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = ["type.proto"],
)

ts_proto_library(
    name = "type",
    deps = [":proto"],
)

ts_project(
    name = "lib",
    tsconfig = "//:tsconfig.json",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

nodejs_image(
    name = "client",
    data = [":lib"],
    entry_point = ":client.ts",
)

nodejs_image(
    name = "server",
    data = [":lib"],
    entry_point = ":server.ts",
)
