load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@npm//protoc-gen-ts:index.bzl", "ts_proto_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = ["type.proto"],
)

ts_proto_library(
    name = "type",
    deps = [":proto"],
)

ts_project(
    name = "lib",
    tsconfig = "//:tsconfig.json",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

nodejs_binary(
    name = "serve",
    data = [":lib", "key.pem", "cert.pem"],
    entry_point = ":server.ts",
)
