
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:index.bzl", "ts_proto_library")

proto_library(
    name = "protos",
    srcs = glob(["*.proto"])
)

ts_proto_library(
    name = "codegen",
    experimental_features = True,
    deps = [
        ":protos",
    ],
)

ts_project(
    name = "compiler",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.d.ts"]
    ),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "declaration": True,
        },
    },
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)