load("//tools:diff_and_update.bzl", "diff_and_update")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")


diff_and_update(
    name = "diff_default",
    srcs = [
        "//test/_/default:default.ts",
        "//test/_/default:default_proto2.ts",
        "//test/_/default:default_proto3.ts",
        "//test/_/default:default_common.ts",
    ],
    checked = ["default.ts", "default_proto2.ts", "default_proto3.ts", "default_common.ts"]
)

ts_project(
    name = "default",
    srcs = glob(["*.ts"]),
    tsconfig = {
    }, # no special options
    extends = "//test:tsconfig.json",
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":default",
    ],
)
