load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

write_source_files(
    name = "diff",
    files = {
        "default.ts": "//test/_/default:default.ts",
        "default_common.ts": "//test/_/default:default_common.ts",
        "default_proto2.ts": "//test/_/default:default_proto2.ts",
        "default_proto3.ts": "//test/_/default:default_proto3.ts",
    },
)

ts_project(
    name = "default",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
        },
    },
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/google-protobuf",
    ],
)

jasmine_test(
    name = "test",
    args = ["**/*.spec.js"],
    data = [
        ":default",
    ],
)
