load("//tools:diff_and_update.bzl", "diff_and_update")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

diff_and_update(
    name = "diff_explicit_override",
    srcs = [
      "//test/_/explicit_override:explicit_override.ts",
    ],
    checked = [ "explicit_override.ts" ]
)

ts_project(
    name = "explicit_override",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "noImplicitAny": True,
            "noImplicitOverride": True
        },
    },
    extends = "//test:tsconfig.json",
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":explicit_override",
    ],
)
