load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "diff",
    files = {
        "explicit_override.ts": "//test/_/explicit_override:explicit_override.ts"
    }
)

ts_project(
    name = "explicit_override",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "noImplicitAny": True,
            "noImplicitOverride": True,
        },
    },
    deps = [
        "@npm//@grpc/grpc-js",
        "@npm//@types/google-protobuf",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//google-protobuf",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":explicit_override",
    ],
)
