load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "diff",
    files = {
        "explicit_override.ts": "//test/_/explicit_override:explicit_override.ts",
    },
)

ts_project(
    name = "explicit_override",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "noImplicitAny": True,
            "noImplicitOverride": True,
        },
    },
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/google-protobuf",
    ],
)

jasmine_test(
    name = "test",
    args = ["**/*.spec.js"],
    data = [
        ":explicit_override",
    ],
)
