load("//tools:diff_and_update.bzl", "diff_and_update")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")


diff_and_update(
    name = "diff_default",
    srcs = [
        "//test/_/issues:171.ts",
    ],
    checked = ["171.ts"],
)

ts_project(
    name = "default",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS"
        },
    },
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

build_test(
    name = "build_test",
    targets = [":default"],
)
