load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

write_source_files(
    name = "diff",
    files = {
        "171.ts": "//test/_/issues:171.ts",
    },
)

ts_project(
    name = "default",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
        },
    },
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/google-protobuf",
    ],
)

build_test(
    name = "build_test",
    targets = [":default"],
)
