load("//tools:diff_and_update.bzl", "diff_and_update")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

diff_and_update(
    name = "diff_json_names",
    srcs = [
      "//test/_/json_names:json_names.ts",
    ],
    checked = [ "json_names.ts" ]
)

ts_project(
    name = "experimental",
    srcs = glob(["*.ts"]),
    tsconfig = {}, # no special options
    extends = "//test:tsconfig.json",
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":experimental",
    ],
)
