load("//:node_modules/@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "diff",
    files = {
        "json_names.ts": "//test/_/json_names:json_names.ts",
    },
)

ts_project(
    name = "experimental",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
            "noImplicitAny": True,
        },
    },
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/google-protobuf",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":experimental",
    ],
)
