load("//tools:diff_and_update.bzl", "diff_and_update")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")


diff_and_update(
    name = "diff_presence",
    srcs = [
        "//test/_/presence:presence_proto2.ts",
        "//test/_/presence:presence_proto3.ts",
        "//test/_/presence:presence_common.ts",
    ],
    checked = ["presence_proto2.ts", "presence_proto3.ts", "presence_common.ts"]
)

ts_project(
    name = "presence",
    srcs = glob(["*.ts"]),
    tsconfig = {}, # no special options
    extends = "//test:tsconfig.json",
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//@grpc/grpc-js",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":presence",
    ],
)
