load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "diff",
    files = {
        "presence_common.ts": "//test/_/presence:presence_common.ts",
        "presence_proto2.ts": "//test/_/presence:presence_proto2.ts",
        "presence_proto3.ts": "//test/_/presence:presence_proto3.ts"
    }
)

ts_project(
    name = "presence",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "target": "ES2020",
            "module": "CommonJS",
        },
    },
    deps = [
        "@npm//@grpc/grpc-js",
        "@npm//@types/google-protobuf",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//google-protobuf",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":presence",
    ],
)
