load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@aspect_rules_cypress//cypress:defs.bzl", "cypress_test")

cypress_test(
    name = "web_test",
    args = [
        "run",
        "--config-file=cypress.config.js",
    ],
    data = [
        "cypress.config.js",
        "web.spec.js",
        "//test/web:server",
        "//test/web/client",
    ],
    tags = ["no-windows-latest"],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//os:macos",
    ],
)

go_binary(
    name = "server",
    embed = [":web_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "web_lib",
    srcs = ["server.go"],
    importpath = "github.com/thesayyn/protoc-gen-ts/test/web",
    visibility = ["//visibility:private"],
    deps = ["//test/web/server"],
)
