load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:index.bzl", "ts_proto_library")

SRCS = glob(["*.proto"])

# gazelle:go_generate_proto false
proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "experimental",
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    features = ["unary_rpc_promise"],
    visibility = ["//test/experimental:__pkg__"],
    deps = [":protos"],
)