load("@rules_proto//proto:defs.bzl", "proto_library")
load("//private:defs.bzl", "ts_proto_library")

SRCS = glob(["**/*.proto"])

# gazelle:go_generate_proto false
proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "explicit_override",
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    features = ["explicit_override"],
    visibility = ["//test/explicit_override:__pkg__"],
    deps = [":protos"],
)
