load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//:index.bzl", "ts_proto_library")

SRCS = glob(["**/*.proto"])

proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "issues",
    deps = [":protos"],
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    visibility = ["//visibility:public"],
)

build_test(
    name = "test",
    targets = [
        ":issues",
    ],
)
